objects/Zuora__Product__c.object
<CustomObject>
    <fields>
        <fullName>Zuora__Description__c</fullName>
        <label>Description</label>
        <length>25535</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Zuora__EffectiveEndDate__c</fullName>
        <label>Effective End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Zuora__EntityID__c</fullName>
        <label>Entity ID</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Zuora__SKU__c</fullName>
        <label>SKU</label>
        <length>70</length>
        <type>Text</type>
    </fields>
    <label>Product</label>
    <nameField>
        <label>Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>